--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,25 @@ project(libmboxid VERSION 0.0.1
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-add_subdirectory(common)
-add_library(mboxid $<TARGET_OBJECTS:common>)
-
+add_subdirectory(src)
 add_subdirectory(tests)
 
+include(CMakePackageConfigHelpers)
+configure_package_config_file(${CMAKE_CURRENT_SOURCE_DIR}/Config.cmake.in
+    ${CMAKE_CURRENT_BINARY_DIR}/mboxidConfig.cmake
+    INSTALL_DESTINATION lib/cmake/mboxid
+    NO_SET_AND_CHECK_MACRO
+    NO_CHECK_REQUIRED_COMPONENTS_MACRO
+    )
+
+write_basic_package_version_file(
+    ${CMAKE_CURRENT_BINARY_DIR}/mboxidConfigVersion.cmake
+    VERSION "${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}"
+    COMPATIBILITY SameMajorVersion
+    )
+
+install(FILES
+    ${CMAKE_CURRENT_BINARY_DIR}/mboxidConfig.cmake
+    ${CMAKE_CURRENT_BINARY_DIR}/mboxidConfigVersion.cmake
+    DESTINATION lib/cmake/mboxid
+    )
