--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,17 +1,25 @@
 include(FetchContent)
-FetchContent_Declare(
-  googletest
-  GIT_REPOSITORY git@github.com:google/googletest.git
-  GIT_TAG        f8d7d77 # v1.14
-)
 
+FetchContent_Declare(
+    googletest
+    GIT_REPOSITORY git@github.com:google/googletest.git
+    GIT_TAG        f8d7d77 # v1.14
+    )
+
+option(INSTALL_GTEST OFF)
 FetchContent_MakeAvailable(googletest)
 
 enable_testing()
 
-add_executable(common_test common_test.cpp)
-target_link_libraries(common_test GTest::gtest_main)
+set(TESTS test_unique_fd test_byteorder test_error test_version test_logger)
 
 include(GoogleTest)
-gtest_discover_tests(common_test)
+
+foreach(TEST ${TESTS})
+    add_executable(${TEST} ${TEST}.cpp)
+    target_link_libraries(${TEST} mboxid GTest::gtest_main GTest::gmock_main
+        fmt)
+    target_include_directories(${TEST} PRIVATE ${CMAKE_SOURCE_DIR}/src)
+    gtest_discover_tests(${TEST})
+endforeach()
 
