--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.25)
 
 project(libmboxid VERSION 0.0.1
-    DESCRIPTION "A Modbus TCP C++ library for unixoid systems"
+    DESCRIPTION "A Modbus TCP C++ library for unixoid systems."
     LANGUAGES C CXX
     )
 
@@ -14,6 +14,7 @@ add_compile_options(-Wall -Wextra)
 add_subdirectory(src)
 add_subdirectory(tests)
 add_subdirectory(examples)
+add_subdirectory(doxygen)
 
 include(CMakePackageConfigHelpers)
 configure_package_config_file(${CMAKE_CURRENT_SOURCE_DIR}/Config.cmake.in
